--- a/database/postgresql/zalando/cluster.yaml
+++ b/database/postgresql/zalando/cluster.yaml
@@ -13,8 +13,8 @@ spec:
   spiloFSGroup: 103
   teamId: postgres
   numberOfInstances: 1
-  #tls:
-  #  secretName: kc-tls-sct
+  tls:
+    secretName: bm2c-tls-sct
   postgresql:
     version: '14'
     parameters:  # Expert section
@@ -43,11 +43,19 @@ spec:
   databases:
     postgres: postgres
   enableMasterLoadBalancer: true
-  enableReplicaLoadBalancer: true
+  enableReplicaLoadBalancer: false
   #allowedSourceRanges: null # load balancers' source ranges for both master and replica services
   # - 127.0.0.1/32
   enableConnectionPooler: false # enable/disable connection pooler deployment
   enableReplicaConnectionPooler: false # set to enable connectionPooler for replica service
   volume:
     storageClass: bm2c-postgres-sc
-    size: 20Gi
+    size: 10Gi
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: nodegroup-type
+              operator: In
+              values:
+                - applications
