--- a/database/postgresql/zalando/instance1_volume.yaml
+++ b/database/postgresql/zalando/instance1_volume.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: bm2c-postgres-pv
+  name: bm2c-postgres-intance1-pv
   namespace: postgres
 spec:
   accessModes:
   - ReadWriteOnce
   capacity:
-    storage: 20Gi
+    storage: 10Gi
   nfs:
-    path: /run/media/byron/Vm/nfs/postgresql/instance1
-    server: 192.168.1.121
+    path: /opt/nfs/postgres/instance1
+    server: 192.168.1.122
   persistentVolumeReclaimPolicy: Retain
   storageClassName: bm2c-postgres-sc
   volumeMode: Filesystem
